# sdaccel_perf_benchmark

./: .gitignore  CMakeLists.txt  PeakBenchmark.cpp  PeakBenchmark.h.in  README.md  Synthesis.tcl.in  Testbench.cpp
hlslib/: DataPack.h
include/: PerformanceBenchmark.h.in
kernel/: PerformanceBenchmark.cpp
peak/: maximize.py
peak/boards/: VU37P.board  VU9P.board
peak/ops/: Jacobi2D_HP.ops  OneAddFiveMult_SP.ops
script/: Synthesis.tcl.in
src/: ExecuteKernel.cpp  Testbench.cpp
